fix(blog): overflow and font size on mobile

--- a/src/styles/dan-denney.webflow.css
+++ b/src/styles/dan-denney.webflow.css
@@ -9899,7 +9899,7 @@ blockquote {
   }
 
   .blog-rich-text p {
-    font-size: 15px;
+    font-size: 1.125rem;
   }
 
   .blog-rich-text h2 {
